# craftworld

./: .gitignore  CMakeLists.txt  README.md
Libraries/: CMakeLists.txt
Projects/: CMakeLists.txt
Projects/Client/: CMakeLists.txt  Craftworld-Client
Projects/Client/Source/: Client.cpp  Client.hpp  Main.cpp  joinleave.py
Projects/Common/: CMakeLists.txt
Projects/Common/Source/: Block.cpp  Block.hpp  Chunk.cpp  Chunk.hpp  Delegate.cpp  Delegate.hpp  Entity.cpp  Entity.hpp  Grid.cpp  Grid.hpp  Player.cpp  Player.hpp  Vector3D.hpp  World.cpp  World.hpp  test.cpp
Projects/Common/Source/Actions/: Action.cpp  Action.hpp  ConnectAction.cpp  ConnectAction.hpp  FoundPlayerAction.cpp  FoundPlayerAction.hpp  GetWorldAction.cpp  GetWorldAction.hpp  LocatePlayerAction.cpp  LocatePlayerAction.hpp  MoveAction.cpp  MoveAction.hpp  PickUpBlockAction.cpp  PickUpBlockAction.hpp  PlaceBlockAction.cpp  PlaceBlockAction.hpp  RefreshWorldAction.cpp  RefreshWorldAction.hpp
Projects/Common/Source/Entities/: Block.cpp  Block.hpp  Chunk.cpp  Chunk.hpp  Entity.cpp  Entity.hpp  Player.cpp  Player.hpp
Projects/Common/Source/Utility/: Serialization.cpp  Serialization.hpp  Vector3D.hpp
Projects/SAMOVAR/: CMakeLists.txt
Projects/SAMOVAR/Source/: Main.cpp
Projects/Server/: CMakeLists.txt  Craftworld-Server
Projects/Server/Source/: Connection.cpp  Connection.hpp  Main.cpp  Matchmaker.cpp  Matchmaker.hpp  Server.cpp  Server.hpp  Slave.cpp  Slave.hpp
Source/: Block.hpp  Chunk.hpp  Main.cpp  Player.hpp
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
