#set(BOOST_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/boost_1_68_0")

#set(Boost_USE_STATIC_LIBS        ON)
#set(Boost_USE_MULTITHREADED      ON)
#set(Boost_USE_STATIC_RUNTIME    OFF)
#find_package(Boost 1.68.0 COMPONENTS asio mpi serialization)
#
#if(Boost_FOUND)
#    include_directories(${Boost_INCLUDE_DIRS})
#endif()
